fixed right margin on date alignment

--- a/src/sources/forus-platform/scss/general/website/style.scss
+++ b/src/sources/forus-platform/scss/general/website/style.scss
@@ -1583,10 +1583,10 @@ html {
                             color: #7e818c;  
                             top:52px;
                             &_right{
-                                right: -120px; 
+                                right: -130px; 
                             }
                             &_left {
-                                left: -120px; 
+                                left: -130px; 
                             }
                         }
                         &_description {
